# wakeup

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
resources/: de.swsnr.wakeup.metainfo.xml  resources.gresource.xml
resources/gtk/: help-overlay.blp  help-overlay.ui
resources/ui/: add-device-dialog.blp  add-device-dialog.ui  device-row.blp  device-row.ui  validation-indicator.blp  validation-indicator.ui  wakeup-application-window.blp  wakeup-application-window.ui
src/wakeup/: __init__.py  application.py  widgets.py
