[project]
name = "wakeup"
version = "0.1.0"
description = "Wake up things in your network"
readme = "README.md"
authors = [{ name = "Sebastian Wiesner", email = "sebastian@swsnr.de" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Environment :: X11 Applications :: GTK",
    "Environment :: X11 Applications :: Gnome",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Desktop Environment :: Gnome",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
    # Do not upload to PyPI, we distribute via flatpak
    "Private :: Do Not Upload",
]
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/swsnr/wakeup"
Repository = "https://github.com/swsnr/wakeup.git"

[project.scripts]
wakeup = "wakeup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "I",
    "N",
    "D",
    "ANN",
    "ASYNC",
    "LOG",
    "G",
    "INT",
    "PERF",
    "RUF",
    "TRY",
]
ignore = ["D203", "D213"]

[tool.pyright]
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true
enableTypeIgnoreComments = false
typeCheckingMode = "strict"
reportPropertyTypeMismatch = "error"
reportMissingTypeStubs = "error"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportDuplicateImport = "error"
reportUntypedNamedTuple = "error"
reportConstantRedefinition = "error"
reportDeprecated = "error"
reportUninitializedInstanceVariable = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportUnusedExpression = "error"
reportMatchNotExhaustive = "error"
reportImplicitOverride = "error"
reportShadowedImports = "error"
