[project]
name = "wakeup"
version = "0.1.0"
description = "Wake up things in your network"
readme = "README.md"
authors = [{ name = "Sebastian Wiesner", email = "sebastian@swsnr.de" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Environment :: X11 Applications :: GTK",
    "Environment :: X11 Applications :: Gnome",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Desktop Environment :: Gnome",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
    # Do not upload to PyPI, we distribute via flatpak
    "Private :: Do Not Upload",
]
requires-python = ">=3.12"
dependencies = ["pygobject>=3.50.0"]

[project.urls]
Homepage = "https://github.com/swsnr/wakeup"
Repository = "https://github.com/swsnr/wakeup.git"

[project.scripts]
wakeup = "wakeup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pygobject-stubs>=2.11.0"]

[tool.ruff.lint]
select = [
    "ANN",
    "ASYNC",
    "B",
    "C4",
    "D",
    "E",
    "F",
    "G",
    "I",
    "INT",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "RUF",
    "SIM",
    "TRY",
]
ignore = [
    "D203",   # D211 instead
    "D213",   # D212 instead
    "ANN101", # Deprecated, see https://docs.astral.sh/ruff/rules/missing-type-self/#missing-type-self-ann101
]

[tool.pyright]
deprecateTypingAliases = true
enableTypeIgnoreComments = false
reportConstantRedefinition = "error"
reportDeprecated = "error"
reportDuplicateImport = "error"
reportImplicitOverride = "error"
reportMatchNotExhaustive = "error"
reportMissingModuleSource = "none"            # We rely on stubs for PyGObject
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportMissingTypeStubs = "error"
reportPropertyTypeMismatch = "error"
reportShadowedImports = "error"
reportUninitializedInstanceVariable = "error"
reportUntypedNamedTuple = "error"
reportUnusedClass = "error"
reportUnusedExpression = "error"
reportUnusedFunction = "error"
reportUnusedImport = "error"
reportUnusedVariable = "error"
strictDictionaryInference = true
strictListInference = true
strictSetInference = true
typeCheckingMode = "strict"
